[gd_scene load_steps=4 format=2]

[ext_resource path="res://engine/gui/NewGameScene.gd" type="Script" id=1]
[ext_resource path="res://engine/gui/lobby/NewGameLobby.tscn" type="PackedScene" id=2]
[ext_resource path="res://engine/gui/ChooseModuleDialog.gd" type="Script" id=3]

[node name="NewGameScene" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = -2.0
margin_bottom = -100.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ModuleSelection" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.06
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="SelectModule" type="Button" parent="ModuleSelection"]
margin_right = 103.0
margin_bottom = 30.0
text = "Select Module"

[node name="FileName" type="LineEdit" parent="ModuleSelection"]
margin_left = 107.0
margin_top = 3.0
margin_right = 797.0
margin_bottom = 27.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "res://data/Module1/Module1.gd"
editable = false

[node name="Lobby" parent="." instance=ExtResource( 2 )]
anchor_top = 0.08
anchor_bottom = 0.9
margin_bottom = 0.0

[node name="Players" parent="Lobby" index="0"]
margin_bottom = 1.30002
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="PlayerList" parent="Lobby/Players" index="0"]
margin_right = 198.0
margin_bottom = 370.0

[node name="Scroll" parent="Lobby/Players" index="1"]
margin_left = 202.0
margin_right = 797.0
margin_bottom = 370.0

[node name="UnitList" parent="Lobby/Players/Scroll" index="0"]
margin_right = 595.0
margin_bottom = 370.0

[node name="CreateCharacter" parent="Lobby" index="1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -95.0
margin_top = -36.0
margin_right = 95.0
margin_bottom = -15.0

[node name="UnitLimit" parent="Lobby" index="2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -191.0
margin_top = -38.0
margin_right = -9.0
margin_bottom = -17.0

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_top = 0.92
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="StartGame" type="Button" parent="Buttons"]
margin_left = 351.0
margin_right = 392.0
margin_bottom = 40.0
disabled = true
text = "Start"

[node name="LeaveGame" type="Button" parent="Buttons"]
margin_left = 396.0
margin_right = 445.0
margin_bottom = 40.0
text = "Leave"

[node name="ChooseModuleDialog" type="FileDialog" parent="."]
margin_left = 6.0
margin_top = 27.0
margin_right = 550.0
margin_bottom = 539.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.gd" )
script = ExtResource( 3 )

[connection signal="pressed" from="ModuleSelection/SelectModule" to="ChooseModuleDialog" method="set_visible" binds= [ true ]]
[connection signal="pressed" from="Buttons/StartGame" to="." method="onStartGamePressed"]
[connection signal="pressed" from="Buttons/LeaveGame" to="." method="onLeaveGamePressed"]
[connection signal="file_selected" from="ChooseModuleDialog" to="." method="moduleSelected"]

[editable path="Lobby"]
